--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,80 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;700&display=swap');
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --primary-color: #1A1A1A;  /* Main text color */
+  --secondary-color: #666666; /* Subtext, muted text */
+  --accent-color: #FF5733;  /* Highlights, buttons */
+  --background-color: #f5f5f5; /* Page background */
+  --border-color: #E0E0E0; /* Light border */
+  --customPink: #DB0042;
+  
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  color: var(--primary-color);
+  background: var(--background-color);
+  font-family: 'Work Sans', sans-serif;
+}
+
+h1, h2, h3 {
+  color: var(--primary-color);
+}
+
+p {
+  color: var(--secondary-color);
+}
+
+a {
+
+  text-decoration: none;
+}
+
+a:hover {
+  color: darken(var(--accent-color), 10%);
+}
+
+.light-text {
+  font-weight: 300;  /* Light */
+}
+
+.extra-light-text {
+  font-weight: 200;  /* ExtraLight */
+}
+
+.regular-text {
+  font-weight: 400;  /* Normal */
+}
+
+.medium-text {
+  font-weight: 500;  /* Medium */
+}
+
+.bold-text {
+  font-weight: 700;  /* Bold */
+}
+
+
+@font-face {
+  font-family: 'Nitti';
+  src: url('/public/fonts/Nitti-Normal.woff') format('woff');
+  font-weight: 400;  /* Regular */
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Nitti';
+  src: url('/public/fonts/Nitti-Bold.woff') format('woff');
+  font-weight: 700;  /* Bold */
+  font-style: normal;
+}
+.logo-text {
+  font-family: 'Nitti', sans-serif;
+  font-weight: 700; /* Bold for logo */
+}
+.body-text {
+  font-family: 'Nitti', sans-serif;
+  font-weight: 400; /* Regular for other text */
 }
